Changes in files and added missing files

--- a/TechTest/AnyCompany/AnyCompany.csproj
+++ b/TechTest/AnyCompany/AnyCompany.csproj
@@ -45,6 +45,13 @@
     <Compile Include="Order.cs" />
     <Compile Include="OrderRepository.cs" />
     <Compile Include="OrderService.cs" />
+	<Compile Include="CustomerService.cs" />
+	<Compile Include="CustomerOrderService.cs" />
+	<Compile Include="VATProvider.cs" />
+	<Compile Include="Interfaces\IOrderRepository.cs" />
+	<Compile Include="Interfaces\IOrderService.cs" />
+	<Compile Include="Interfaces\ICustomerService.cs" />
+	<Compile Include="Interfaces\IVATProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
